@@ -43,8 +43,8 @@ import java.util.Arrays;
 import java.util.Collection;
 import java.util.HashSet;
 import java.util.Set;
-import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
+import org.apache.logging.log4j.Logger;
+import org.apache.logging.log4j.LogManager;
 
 import org.apache.pdfbox.cos.COSArray;
 import org.apache.pdfbox.cos.COSBase;
@@ -55,7 +55,6 @@ import org.apache.pdfbox.cos.COSStream;
 import org.apache.pdfbox.cos.COSString;
 import org.apache.pdfbox.examples.signature.cert.CertificateVerificationException;
 import org.apache.pdfbox.examples.signature.cert.CertificateVerifier;
-import org.apache.pdfbox.io.IOUtils;
 import org.apache.pdfbox.io.RandomAccessReadBufferedFile;
 import org.apache.pdfbox.pdfparser.PDFParser;
 import org.apache.pdfbox.pdmodel.PDDocument;
@@ -91,7 +90,7 @@ import org.bouncycastle.util.Store;
  */
 public final class ShowSignature
 {
-    private static final Log LOG = LogFactory.getLog(ShowSignature.class);
+    private static final Logger LOG = LogManager.getLogger(ShowSignature.class);
 
     private final SimpleDateFormat sdf = new SimpleDateFormat("dd.MM.yyyy HH:mm:ss");
 
@@ -624,23 +623,23 @@ public final class ShowSignature
     private void analyseDSS(PDDocument document) throws IOException
     {
         PDDocumentCatalog catalog = document.getDocumentCatalog();
-        COSBase dssElement = catalog.getCOSObject().getDictionaryObject("DSS");
+        COSBase dssElement = catalog.getCOSObject().getDictionaryObject(COSName.DSS);
 
         if (dssElement instanceof COSDictionary)
         {
             COSDictionary dss = (COSDictionary) dssElement;
             System.out.println("DSS Dictionary: " + dss);
-            COSBase certsElement = dss.getDictionaryObject("Certs");
+            COSBase certsElement = dss.getDictionaryObject(COSName.CERTS);
             if (certsElement instanceof COSArray)
             {
                 printStreamsFromArray((COSArray) certsElement, "Cert");
             }
-            COSBase ocspsElement = dss.getDictionaryObject("OCSPs");
+            COSBase ocspsElement = dss.getDictionaryObject(COSName.OCSPS);
             if (ocspsElement instanceof COSArray)
             {
                 printStreamsFromArray((COSArray) ocspsElement, "Ocsp");
             }
-            COSBase crlElement = dss.getDictionaryObject("CRLs");
+            COSBase crlElement = dss.getDictionaryObject(COSName.CRLS);
             if (crlElement instanceof COSArray)
             {
                 printStreamsFromArray((COSArray) crlElement, "CRL");
@@ -666,7 +665,7 @@ public final class ShowSignature
                 COSStream cosStream = (COSStream) streamObj.getObject();
                 try (InputStream is = cosStream.createInputStream())
                 {
-                    byte[] streamBytes = IOUtils.toByteArray(is);
+                    byte[] streamBytes = is.readAllBytes();
                     System.out.println(description + " (" + elements.indexOf(streamObj) + "): "
                         + Hex.getString(streamBytes));
                 }
