@@ -21,6 +21,8 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
@@ -36,8 +38,8 @@ import java.util.Date;
 import java.util.Random;
 import java.util.Set;
 
-import org.apache.commons.logging.Log;
-import org.apache.commons.logging.LogFactory;
+import org.apache.logging.log4j.Logger;
+import org.apache.logging.log4j.LogManager;
 import org.apache.pdfbox.examples.signature.SigUtils;
 import org.apache.pdfbox.pdmodel.encryption.SecurityProvider;
 import org.bouncycastle.asn1.DEROctetString;
@@ -75,7 +77,7 @@ import org.bouncycastle.operator.jcajce.JcaContentVerifierProviderBuilder;
  */
 public class OcspHelper
 {
-    private static final Log LOG = LogFactory.getLog(OcspHelper.class);
+    private static final Logger LOG = LogManager.getLogger(OcspHelper.class);
 
     private final X509Certificate issuerCertificate;
     private final Date signDate;
@@ -128,8 +130,10 @@ public class OcspHelper
      * @throws IOException
      * @throws OCSPException
      * @throws RevokedCertificateException
+     * @throws URISyntaxException
      */
-    public OCSPResp getResponseOcsp() throws IOException, OCSPException, RevokedCertificateException
+    public OCSPResp getResponseOcsp()
+            throws IOException, OCSPException, RevokedCertificateException, URISyntaxException
     {
         OCSPResp ocspResponse = performRequest(ocspUrl);
         verifyOcspResponse(ocspResponse);
@@ -236,8 +240,8 @@ public class OcspHelper
                                 revokedStatus.getRevocationTime(),
                                 revokedStatus.getRevocationTime());
                 }
-                LOG.info("The certificate was revoked after signing by OCSP " + ocspUrl + 
-                         " on " + revokedStatus.getRevocationTime());
+                LOG.info("The certificate was revoked after signing by OCSP {} on {}", ocspUrl,
+                        revokedStatus.getRevocationTime());
             }
             else if (status != CertificateStatus.GOOD)
             {
@@ -375,12 +379,12 @@ public class OcspHelper
         }
         if (curDate.compareTo(thisUpdate) < 0)
         {
-            LOG.error(curDate + " < " + thisUpdate);
+            LOG.error("{} < {}", curDate, thisUpdate);
             throw new OCSPException("OCSP: current date < thisUpdate field (RFC 5019 2.2.4.)");
         }
         if (curDate.compareTo(nextUpdate) > 0)
         {
-            LOG.error(curDate + " > " + nextUpdate);
+            LOG.error("{} > {}", curDate, nextUpdate);
             throw new OCSPException("OCSP: current date > nextUpdate field (RFC 5019 2.2.4.)");
         }
         LOG.info("OCSP response is fresh");
@@ -395,7 +399,7 @@ public class OcspHelper
      * @throws IOException if the default security provider can't be instantiated
      */
     private void checkOcspSignature(X509Certificate certificate, BasicOCSPResp basicResponse)
-            throws OCSPException, IOException
+            throws OCSPException
     {
         try
         {
@@ -451,11 +455,13 @@ public class OcspHelper
      * @return the OCSPResp, that has been fetched from the ocspUrl
      * @throws IOException
      * @throws OCSPException
+     * @throws URISyntaxException
      */
-    private OCSPResp performRequest(String urlString) throws IOException, OCSPException
+    private OCSPResp performRequest(String urlString)
+            throws IOException, OCSPException, URISyntaxException
     {
         OCSPReq request = generateOCSPRequest();
-        URL url = new URL(urlString);
+        URL url = new URI(urlString).toURL();
         HttpURLConnection httpConnection = (HttpURLConnection) url.openConnection();
         try
         {
@@ -480,12 +486,12 @@ public class OcspHelper
                 {
                     // redirection from http:// to https://
                     // change this code if you want to be more flexible (but think about security!)
-                    LOG.info("redirection to " + location + " followed");
+                    LOG.info("redirection to {} followed", location);
                     return performRequest(location);
                 }
                 else
                 {
-                    LOG.info("redirection to " + location + " ignored");
+                    LOG.info("redirection to {} ignored", location);
                 }
             }
             if (responseCode != HttpURLConnection.HTTP_OK)
@@ -546,7 +552,7 @@ public class OcspHelper
                 break;
             default:
                 statusInfo = "UNKNOWN";
-                LOG.error("Unknown OCSPResponse status code! " + status);
+                LOG.error("Unknown OCSPResponse status code! {}", status);
             }
         }
         if (resp == null || resp.getStatus() != OCSPResponseStatus.SUCCESSFUL)
