@@ -20,25 +20,30 @@ import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 
-import org.apache.pdfbox.io.IOUtils;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
+
 import org.apache.pdfbox.io.RandomAccessRead;
 import org.apache.pdfbox.io.RandomAccessReadBuffer;
 
 /**
  * An implementation of the TTFDataStream using RandomAccessRead as source.
- * 
+ * The underlying RandomAccessRead can be any length, but this implementation supports
+ * only bufferLengths upto Integer.MAX_VALUE.
  */
 class RandomAccessReadDataStream extends TTFDataStream
 {
-    private final RandomAccessRead randomAccessRead;
+    private static final Logger LOG = LogManager.getLogger(RandomAccessReadDataStream.class);
+
     private final long length;
     private final byte[] data;
-    
+    private int currentPosition = 0;
+
     /**
      * Constructor.
-     * 
-     * @param randomAccessRead source to be read from
-     * 
+     *
+     * @param randomAccessRead source to be read from. Caller should close it.
+     *
      * @throws IOException If there is a problem reading the source data.
      */
     RandomAccessReadDataStream(RandomAccessRead randomAccessRead) throws IOException
@@ -52,21 +57,19 @@ class RandomAccessReadDataStream extends TTFDataStream
         {
             remainingBytes -= amountRead;
         }
-        this.randomAccessRead = new RandomAccessReadBuffer(data);
     }
-    
+
     /**
      * Constructor.
-     * 
-     * @param inputStream source to be read from
-     * 
+     *
+     * @param inputStream source to be read from. Caller should close it.
+     *
      * @throws IOException If there is a problem reading the source data.
      */
     RandomAccessReadDataStream(InputStream inputStream) throws IOException
     {
-        data = IOUtils.toByteArray(inputStream);
+        data = inputStream.readAllBytes();
         length = data.length;
-        this.randomAccessRead = new RandomAccessReadBuffer(data);
     }
 
     /**
@@ -77,34 +80,38 @@ class RandomAccessReadDataStream extends TTFDataStream
     @Override
     public long getCurrentPosition() throws IOException
     {
-        return randomAccessRead.getPosition();
+        return currentPosition;
     }
-    
+
     /**
      * Close the underlying resources.
-     * 
+     *
      * @throws IOException If there is an error closing the resources.
      */
     @Override
     public void close() throws IOException
     {
-        randomAccessRead.close();
+        // nothing to do
     }
-    
+
     /**
      * Read an unsigned byte.
-     * @return An unsigned byte.
+     * @return An unsigned byte, or -1, signalling 'no more data'
      * @throws IOException If there is an error reading the data.
      */
     @Override
     public int read() throws IOException
     {
-        return randomAccessRead.read();
+        if (currentPosition >= length)
+        {
+            return -1;
+        }
+        return data[currentPosition++] & 0xff;
     }
-    
+
     /**
      * Read a signed 64-bit integer.
-     * 
+     *
      * @return eight bytes interpreted as a long.
      * @throws IOException If there is an error reading the data.
      */
@@ -116,8 +123,8 @@ class RandomAccessReadDataStream extends TTFDataStream
 
     /**
      * Read a signed 32-bit integer.
-     * 
-     * @return 4 bytes interpreted as a int.
+     *
+     * @return 4 bytes interpreted as an int.
      * @throws IOException If there is an error reading the data.
      */
     private int readInt() throws IOException
@@ -130,33 +137,62 @@ class RandomAccessReadDataStream extends TTFDataStream
     }
     /**
      * Seek into the datasource.
-     * 
+     * When the requested <code>pos</code> is &lt; 0, an IOException() is fired.
+     * When the requested <code>pos</code> is &ge; {@link #length}, the {@link #currentPosition}
+     * is set to the first byte <i>after</i> the {@link #data}!
+     *
      * @param pos The position to seek to.
      * @throws IOException If there is an error seeking to that position.
      */
     @Override
     public void seek(long pos) throws IOException
     {
-        randomAccessRead.seek(pos);
+        if (pos < 0)
+        {
+            throw new IOException("Invalid position " + pos);
+        }
+        currentPosition = pos < length ? (int) pos : (int) length;
     }
-    
+
     /**
      * @see java.io.InputStream#read( byte[], int, int )
-     * 
+     *
      * @param b The buffer to write to.
      * @param off The offset into the buffer.
      * @param len The length into the buffer.
-     * 
-     * @return The number of bytes read.
-     * 
+     *
+     * @return The number of bytes read or -1, signalling 'no more data'
+     *
      * @throws IOException If there is an error reading from the stream.
      */
     @Override
     public int read(byte[] b, int off, int len) throws IOException
     {
-        return randomAccessRead.read(b, off, len);
+        if (currentPosition >= length)
+        {
+            return -1;
+        }
+        int remainingBytes = (int) (length - currentPosition);
+        int bytesToRead = Math.min(remainingBytes, len);
+        System.arraycopy(data, currentPosition, b, off, bytesToRead);
+        currentPosition += bytesToRead;
+        return bytesToRead;
     }
-    
+
+    @Override
+    public RandomAccessRead createSubView(long length)
+    {
+        try
+        {
+            return new RandomAccessReadBuffer(data).createView(currentPosition, length);
+        }
+        catch (IOException e)
+        {
+            LOG.warn("Could not create a SubView", e);
+            return null;
+        }
+    }
+
     /**
      * {@inheritDoc}
      */
