@@ -25,7 +25,10 @@ import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
-import java.net.URL;
+
+import java.net.URI;
+import java.net.URISyntaxException;
+import java.nio.ByteBuffer;
 import java.nio.file.Files;
 import java.nio.file.Path;
 
@@ -200,11 +203,11 @@ class RandomAccessReadBufferTest
     }
 
     @Test
-    void testPDFBOX5111() throws IOException
+    void testPDFBOX5111() throws IOException, URISyntaxException
     {
-        try (InputStream is = new URL(
+        try (InputStream is = new URI(
                 "https://issues.apache.org/jira/secure/attachment/13017227/stringwidth.pdf")
-                        .openStream();
+                        .toURL().openStream();
              RandomAccessReadBuffer randomAccessSource = new RandomAccessReadBuffer(is))
         {
             assertEquals(34060, randomAccessSource.length());
@@ -250,6 +253,26 @@ class RandomAccessReadBufferTest
             assertEquals(4096, bytesRead);
             bytesRead = rar.read(buf, 0, 3);
             assertEquals(3, bytesRead);
+        }
+    }
+
+    /**
+     * PDFBOX-5764: constructor has to use the limit of the given buffer as chunksize instead of the capacity.
+     * 
+     * @throws IOException
+     */
+    @Test
+    void testPDFBOX5764() throws IOException
+    {
+        int bufferSize = 4096;
+        int limit = 2048;
+        ByteBuffer buffer = ByteBuffer.wrap(new byte[bufferSize]);
+        buffer.limit(limit);
+        try (RandomAccessRead rar = new RandomAccessReadBuffer(buffer))
+        {
+            byte[] buf = new byte[bufferSize];
+            int bytesRead = rar.read(buf);
+            assertEquals(limit, bytesRead);
         }
     }
 
